# fastio

./: .gitignore  README.md  pyproject.toml
fastio/: byte_buffer.py  common.py  reader.py  writer.py
tests/: test_common.py
