[project]
name = "fastio"
version = "0.1.0"
description = "Zero-overhead abstractions for writing blazing fast IO applications in Python"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "pyright>=1.1.407",
    "pytest>=9.0.2",
    "ruff>=0.14.9",
]
